Designed Hero section using Bootstrap utilities classes and components

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
   </nav>
 
   <!-- Jumbotron -->
-  <div style="background:url(https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/jumbotron.png) no-repeat; background-size: cover;">
+  <div class="jumbotron jumbotron-fluid" style="background:url(https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/jumbotron.png) no-repeat; background-size: cover;">
+    <div class="bg-secondary text-white text-center my-5 ">
+        <h1 class ="display-3">
+            Adminstration made easy
+        </h1>
+        <p>
+            Adhoc is on-demand administrative service for your company growth
+        </p>
+    </div>
    
   </div>
 
@@ -45,9 +53,9 @@
     <!-- Quote Section -->
     <div class="row">
       <div class="col">
-        <h2>"Thanks to Adhoc we now have beautiful and faithful service every
+        <h2 class="font-italic font-weight-light my-5">"Thanks to Adhoc we now have beautiful and faithful service every
           day. Our customers are happy and engagement has drastically increased. Highly recommend!"</h2>
-        <p>-Dave Ellavar, <span>Academy of Code</span></p>
+        <p class="text-right font-italic font-weight-bold">-Dave Ellavar, <span class="font-weight-light font-italic">Academy of Code</span></p>
       </div>
     </div>
     <hr>
@@ -55,7 +63,7 @@
     <!-- Why Adhoc? Text -->
     <div class="row">
       <div class="col">
-        <h2>Why Adhoc?</h2>
+        <h2 class="text-center display-4">Why Adhoc?</h2>
       </div>
     </div>
 
