--- a/index.html
+++ b/index.html
@@ -61,54 +61,96 @@
     <hr>
 
     <!-- Why Adhoc? Text -->
-    <div class="row">
+    <div class="row ">
       <div class="col">
-        <h2 class="text-center display-4">Why Adhoc?</h2>
+        <h2 class="text-center display-4 mb-5">Why Adhoc?</h2>
       </div>
     </div>
 
     <!-- Image Reasons Section -->
-    <div class="row">
-      <div class="col">
+    <div class="row justify-content-center ">
+      <div class="col-8 col-sm-8 col-md-4">
         <!-- First card goes here -->
-
+        <div class="card border-0 ">
+            <img class="card-img-top" src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/experienced.png" alt="card-image1">
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text text-center">
+                    Over 9000 happy clients, and we learn something new from each one.
+                </p>
+                <a href="" class="btn"></a>
+            </div>
+        </div>
       </div>
 
-      <div class="col">
+      <div class="col-8 col-sm-8 col-md-4">
         <!-- Second card goes here -->
+        <div class="card border-0 ">
+            <img class="card-img-top" src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/fun.png" alt="card-image2">
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text text-center">
+                    Ministration?Fun?yea. <br>Somehow we make it happen.</p>
+                </p>
+                <a href="" class="btn"></a>
+            </div>
+        </div>
         
       </div>
 
-      <div class="col">
+      <div class="col-8 col-sm-8 col-md-4">
         <!-- Third card goes here -->
+        <div class="card border-0 ">
+            <img class="card-img-top" src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/smart.png" alt="card-image3">
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text text-center">
+                    Innovative solutions to the trickest of everyday tasks.
+                </p>
+                <a href="" class="btn"></a>
+            </div>
+        </div>
+
 
       </div>
     </div>
 
     <!-- Meet the Team Section -->
-    <div class="row">
-      <div class="col">
-        <h2>Meet the Team</h2>
+    <div class="row bg-dark rounded-top">
+      <div class="col ">
+        <h2 class="text-white text-center display-4">Meet the Team</h2>
       </div>
     </div>
 
     <!-- Team Pictures Carousel -->
-    <div class="row">
+    <div class="row bg-dark rounded-bottom my-20">
       <div class="col">
         <!-- Carousel Component -->
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
+        <div id="carouselExampleControls" class="carousel slide w-50 p-3 m-auto" data-ride="carousel">
+          <div class="carousel-inner ">
             <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/brian.png" class="d-block w-100" alt="team-member-1">
+              <div class="carousel-caption d-none d-md-block bg-dark text-center rounded-pill py-0">
+                <p class="mb-0">CEO: <span class="font-weight-light">Brian</span></p>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/andy.png" class="d-block w-100" alt="team-member-2">
+              <div class="carousel-caption d-none d-md-block bg-dark text-center rounded-pill py-0">
+                <p class="mb-0">CFO: <span class="font-weight-light">Andy</span></p>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/angela.png" class="d-block w-100" alt="team-member-3">
+              <div class="carousel-caption d-none d-md-block bg-dark text-center rounded-pill py-0">
+                <p class="mb-0">COO: <span class="font-weight-light">Angela</span></p>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/amie.png" class="d-block w-100" alt="team-member-4">
+              <div class="carousel-caption d-none d-md-block bg-dark text-center rounded-pill py-0">
+                <p class="mb-0">CTO: <span class="font-weight-light">Amie</span></p>
+              </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -126,7 +168,7 @@
   </div>
 
   <!-- Footer -->
-  <footer> Adhoc &copy;</footer>
+  <footer class="text-center"> Adhoc &copy;</footer>
 
   <!-- Bootstrap's JavaScript Files -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
